fix grid layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ fieldset {
 }
 
 #gallery {
-  width: 350px;
+  width: 300px;
   margin-top: 1.8rem;
 }
 @media only screen and (max-width: 500px) {
@@ -87,6 +87,9 @@ xl, extra-large: 1536px */
     flex-direction: column !important;
     gap: 1rem;
   }
+  .none {
+    display: none;
+  }
 }
 
 div.roller {
@@ -109,6 +112,44 @@ div.roller {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+.image-gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* grid-gap: 2px; */
+  column-gap: 18px;
+  /* grid-auto-rows: 300px; */
+  justify-content: center;
+  align-items: center;
+}
+
+.image-item {
+  width: 100%;
+  /* height: 300px; */
+  background-color: #03363d;
+  /* border: 1px solid black; */
+}
+@media only screen and (max-width: 990px) {
+  .image-gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* grid-gap: 2px; */
+    column-gap: 18px;
+    /* grid-auto-rows: 300px; */
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .image-gallery {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    /* grid-gap: 2px; */
+    column-gap: 18px;
+    /* grid-auto-rows: 300px; */
+    justify-content: center;
+    align-items: center;
   }
 }
 
